--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -4,7 +4,7 @@
             <span>PokeDex</span>
         </button>
         <span class="example-spacer"></span>
-        <button mat-button [routerLink]="['feature', 'pokemon']">
+        <button mat-button [routerLink]="['pokemon']">
             <span>Pokemon</span>
         </button>
     </mat-toolbar>
