--- a/src/app/pokemon/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/pokemon/components/pokemon-details/pokemon-details.component.html
@@ -1,1 +1,16 @@
-<mat-spinner class="flexSpinner" *ngIf="isLoadingResults"></mat-spinner>
+<mat-spinner class="flexSpinner" *ngIf="isLoadingResults; else loadingFinished"></mat-spinner>
+
+<ng-template #loadingFinished>
+    <div class="pokemon-card">
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>{{ pokemon.name | titlecase }}</mat-card-title>
+                <mat-card-subtitle>Start</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-actions>
+                <button mat-button>LIKE</button>
+                <button mat-button>SHARE</button>
+            </mat-card-actions>
+        </mat-card>
+    </div>
+</ng-template>
